commit progetto edv

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,27 +1,21 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #483aaa;
+  --foreground: #867ade;
+  --shadow: #322878;
 }
 
 html,
 body {
   max-width: 100vw;
-  overflow-x: hidden;
+  margin: 0;
+
+  background: var(--background);
 }
 
 body {
+  margin: 0;
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 * {
@@ -29,14 +23,290 @@ body {
   padding: 0;
   margin: 0;
 }
-
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+hr {
+  border: 0;
+  border-top: 5px dashed var(--foreground);
+  margin: 2rem 0;
+}
 a {
   color: inherit;
   text-decoration: none;
 }
+main {
+  position: relative;
+  max-width: 1400px;
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  align-items: center;
+  padding-top: 3rem;
+  margin: 0 auto;
+}
+
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 0;
+  background-color: var(--foreground);
+  flex-basis: 50px;
+  color: var(--background);
+  font-family: inherit;
+}
+.quote {
+  margin: 1rem 0;
+  text-align: center;
+}
+main h1 {
+  text-align: center;
+}
+main form {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 650px;
+  width: 100%;
+  margin: 0 auto;
+  gap: 2px;
+}
+main input {
+  border: 0;
+  flex: 1;
+  background-color: var(--foreground);
+  padding: 1rem;
+  display: block;
+
+  width: 100%;
+  color: var(--background);
+  font-family: inherit;
+}
+main input:active,
+main input:focus {
+  border: 0;
+  outline: none;
+}
+
+main input::placeholder {
+  color: var(--background);
+}
+.current {
+  margin-top: 3rem;
+  font-size: 0.8rem;
+  text-align: center;
+}
+.result {
+  width: 100%;
+  max-width: 800px;
+  margin-top: 2;
+}
+.list {
+  margin: 1rem 0 3rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.list li {
+  margin-top: 1.2rem;
+  cursor: pointer;
+  text-align: center;
+}
+.modal {
+  background-color: var(--background);
+  border: 10px solid var(--foreground);
+  padding: 2rem;
+  margin-top: 2rem;
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  box-shadow: 10px 10px 0px var(--shadow);
+}
+.close {
+  position: relative;
+  top: -10px;
+  left: -20px;
+  cursor: pointer;
+  margin-bottom: 1rem;
+}
+.modal h3 {
+  margin: 1rem 0;
+}
+.modal h2 {
+  text-align: center;
+  line-height: 1.3;
+  font-size: 2rem;
+}
+.metadati {
+  margin: 1rem 0;
+  padding: 0 1rem;
+}
+.metadati li {
+  margin: 0.5rem 0;
+  line-height: 1.4;
+}
+.metadati li span {
+  font-size: 0.8rem;
+}
+
+.filter {
+  width: 100%;
+}
+.filter ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+  font-size: 0.8rem;
+}
+.legenda {
+  margin-top: 1rem;
+  font-size: 0.7rem;
+  text-align: center;
+  line-height: 2;
+}
+.filter li {
+  border-radius: 0;
+  padding: 10px;
+  cursor: pointer;
+}
+.filter li.active {
+  background: var(--foreground);
+  color: var(--background);
+}
+.episodi {
+  line-height: 1.5;
+  padding-left: 1rem;
+}
+
+.episodi li {
+  margin: 1rem 0;
+  position: relative;
+}
+.episodi a {
+  display: block;
+}
+.linkArrow {
+  position: absolute;
+  top: 3px;
+  left: -28px;
+  font-size: 0.8rem;
+}
+.notFound {
+  text-align: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+.notFound img {
+  width: 80%;
+  height: auto;
+  border: 10px solid var(--foreground);
+}
+.notFound h2 {
+  position: absolute;
+  width: 70%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: var(--background);
+  padding: 1rem;
+}
+
+/*scanlines*/
+.scanlines {
+  position: relative;
+}
+.scanlines:before,
+.scanlines:after {
+  display: block;
+  pointer-events: none;
+  content: "";
+  position: absolute;
+}
+.scanlines:before {
+  width: 100%;
+  height: 2px;
+  z-index: 2147483649;
+  background: var(--foreground);
+  opacity: 0.75;
+  animation: scanline 10s linear infinite;
+}
+.scanlines:after {
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2147483648;
+  background: linear-gradient(
+    to bottom,
+    transparent 80%,
+    var(--background) 90%
+  );
+  background-size: 100% 3px;
+  animation: scanlines 1.3s steps(60) infinite;
+}
+
+/* ANIMATE UNIQUE SCANLINE */
+@keyframes scanline {
+  0% {
+    transform: translate3d(0, 200000%, 0);
+  }
+}
+@keyframes scanlines {
+  0% {
+    background-position: 0 50%;
+  }
+}
+div {
+  margin: 0;
+  padding: 0;
+}
+@media screen and (max-width: 1024px) {
+  main h1 {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  main {
+    gap: 0;
+  }
+  .result {
+    padding: 1rem;
+  }
+  .modal {
+    width: 90%;
+  }
+  .modal h2 {
+    font-size: 1.8rem;
+  }
+}
+@media screen and (max-width: 440px) {
+  .close {
+    top: 0px;
+    left: -10px;
+  }
+  .modal {
+    padding: 1rem;
+  }
+  main {
+    padding-top: 1rem;
+  }
+  main h1 {
+    font-size: 1.3rem;
+    padding: 1rem;
+  }
+  main h1 span {
+    display: none;
+  }
+  .quote {
+    font-size: 0.8rem;
   }
 }
