--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,6 +119,7 @@ main input::placeholder {
   margin-top: 1.2rem;
   cursor: pointer;
   text-align: center;
+  font-size: 1.2rem;
 }
 .modal {
   background-color: var(--background);
