--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -263,7 +263,9 @@ main input::placeholder {
   background-size: 100% 3.2px;
   animation: scanlines 1.3s steps(60) infinite;
 }
-
+.easter {
+  text-align: center;
+}
 /* ANIMATE UNIQUE SCANLINE */
 @keyframes scanline {
   0% {
@@ -286,6 +288,16 @@ main input::placeholder {
 }
 
 @media screen and (max-width: 760px) {
+  .linkArrow {
+    top: 7px;
+    left: -20px;
+    font-size: 0.5rem;
+  }
+  .notFound h2 {
+    font-size: 0.7rem;
+    letter-spacing: -2;
+    padding: 0.5rem;
+  }
   main {
     gap: 0;
   }
@@ -297,6 +309,8 @@ main input::placeholder {
   }
   .modal h2 {
     font-size: 1.8rem;
+    margin-bottom: 1rem;
+    text-align: left;
   }
   .current {
     margin-top: 2rem;
@@ -304,7 +318,16 @@ main input::placeholder {
     padding: 0.4rem;
   }
 }
-@media screen and (max-width: 440px) {
+@media screen and (max-width: 500px) {
+  .modal h3 {
+    text-align: left;
+  }
+  .metadati {
+    padding: 0 0.5rem;
+  }
+  .metadati li span {
+    display: block;
+  }
   .close {
     top: 0px;
     left: -10px;
