--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
   --background: #483aaa;
   --foreground: #867ade;
   --shadow: #322878;
+  --shade: #4638a6;
 }
 .blur {
   animation: blur 1s;
@@ -11,14 +12,12 @@ html,
 body {
   max-width: 100vw;
   margin: 0;
-
-  background: var(--background);
 }
 
 body {
   margin: 0;
   color: var(--foreground);
-  background: var(--background);
+  background-color: var(--shade);
 }
 
 * {
@@ -41,9 +40,9 @@ a {
   text-decoration: none;
 }
 main {
+  background: var(--background);
   position: relative;
   max-width: 1400px;
-
   min-height: 100vh;
   display: flex;
   flex-direction: column;
