--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,13 @@
   --shadow: #322878;
   --shade: #4638a6;
 }
+.dark {
+  --background: #000000;
+  --foreground: #1cc243;
+  --shadow: #363636;
+  --shade: #040404;
+  --line: #033b10;
+}
 .blur {
   animation: blur 1s;
 }
@@ -248,7 +255,7 @@ main input::placeholder {
   width: 100%;
   height: 2px;
   z-index: 2147483649;
-  background: var(--foreground);
+  background: var(--line);
   opacity: 0.75;
   animation: scanline 5s linear infinite;
 }
@@ -362,6 +369,22 @@ main input::placeholder {
 
 /*ANIMATIONS*/
 @keyframes blur {
+  0% {
+    filter: blur(10px);
+  }
+  100% {
+    filter: blur(0px);
+  }
+}
+@keyframes blur {
+  0% {
+    filter: blur(10px);
+  }
+  100% {
+    filter: blur(0px);
+  }
+}
+@keyframes blur2 {
   0% {
     filter: blur(10px);
   }
